Fix content overflow

--- a/apps/web/src/styles/globals.css
+++ b/apps/web/src/styles/globals.css
@@ -11,6 +11,12 @@ body {
   @apply p-0 leading-[1.5];
 }
 
+.content h2,
+.content p,
+.content li {
+  @apply overflow-hidden text-ellipsis;
+}
+
 .content a {
   @apply no-underline;
   @apply text-blue-500 hover:text-blue-600;
